syntax = "proto3";

option csharp_namespace = "Accounts.MinimalWebAPI";

package pricing.protos;

service AccountsGrpc {
	rpc GetListAccounts(GetAccountsRequest) returns (stream AccountResponse);
}

message GetAccountsRequest {
}

message AccountResponse {
	string id = 1;
    string userId = 2;
    int32 accountType = 3;
}